--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Taverna plugin site
+<html>
+    <head>
+        <title>Taverna PROV plugin</title>
+    </head>
+    <body>
+        <h1>Taverna PROV plugin</h1>
+        <p>
+        Use the URL for this page as
+        a Plugin Site for <a href="http://www.taverna.org.uk/download/workbench/2-4/">
+        Taverna Workbench 2.4</a> in order to 
+        <a href="http://dev.mygrid.org.uk/wiki/display/taverna24/Installing+plugins">install the plugin</a>.
+        </p>
+        <p>
+        For source code and more information, see the <a
+            href="https://github.com/wf4ever/taverna-prov">taverna-prov
+            github pages</a>.
+        </p>
+    </body>
+</html>
